--- a/news_board/main/templates/base.html
+++ b/news_board/main/templates/base.html
@@ -1,16 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" href="{% static 'main/style.css' %}" />
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-<div>
+<div class="nav">
 	<a href="{% url 'index' %}" >Home</a>
 	<a href="/admin" >Admin</a>
 </div>
-<div>
+<div class="main_block">
 	{% block content %}
 
 	{% endblock %}
