--- a/news_board/main/templates/comment.html
+++ b/news_board/main/templates/comment.html
@@ -1,10 +1,10 @@
 <div>
 	<ul>
-	<p style="color:#005;">
-	{{ comment.content }}
-	</p>
-	<p>by <b>{{ comment.author_name }}</b> at <i>{{ comment.creation_date }}</i></p>
-	<a href="{% url 'add_reply' comment_id=comment.pk %}">reply</a>
+	<div>
+		{{ comment.content }}<br>
+		by <b>{{ comment.author_name }}</b> at <i>{{ comment.creation_date }}</i><br>
+		<button><a href="{% url 'add_reply' comment_id=comment.pk %}">reply</a></button>
+	</div><br>
 	{% if comment.replies %}
 		{% for comment in comment.replies.all %}
 		<li>		{% include 'comment.html' %}</li>		
