--- a/news_board/main/templates/index.html
+++ b/news_board/main/templates/index.html
@@ -6,15 +6,16 @@
 
 {% block content %}
 <div>
+	<ol>
 	{% for post in posts %}
-		<div>
-			<p><a href={{ post.link }} target="_blank">{{ post.title }}</a></p>
+	<li><div class="post"> 
+ 			<a href={{ post.link }} target="_blank">{{ post.title }}</a><br>
+			<div class="date">by <b>{{ post.author_name }}</b><i>{{ post.creation_date}}</i></div><br>
 			<a href="{% url 'upvote_post' post.pk %}">votes: {{ post.amount_of_upvotes }}</a>
-			<a href="{% url 'comments' post_id=post.pk %}">
-				comments: {{ post.comments.count}}</a>
-			<p>by <b>{{ post.author_name }}</b> <i>{{ post.creation_date}}</i></p>
-		</div>		
+			<a href="{% url 'comments' post_id=post.pk %}">comments: {{ post.comments.count}}</a><br>
+		</div></li>		
 	{% endfor %}
+	</ol>
 </div>
 	
 {% endblock content %}
