--- a/news_board/main/templates/base.html
+++ b/news_board/main/templates/base.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="nav">
-	<a href="{% url 'index' %}" >Home</a>
-	<a href="/admin" >Admin</a>
+	<a href="{% url 'index' %}" >Home |</a> 
+	<a href="/admin" >Admin |</a>
 </div>
 <div class="main_block">
 	{% block content %}
