--- a/news_board/main/templates/comments.html
+++ b/news_board/main/templates/comments.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div>
-	<div>
+	<div class="title">
 		{{ post.title }}<br>
 		<div class="date">{{ post.author_name }}
 			{{ post.creation_date }}</div>
