--- a/news_board/main/templates/base.html
+++ b/news_board/main/templates/base.html
@@ -9,8 +9,16 @@
 </head>
 <body>
 <div class="nav">
-	<a href="{% url 'index' %}" >Home |</a> 
-	<a href="/admin" >Admin |</a>
+	<a href="{% url 'index' %}" >Home</a> | 
+	{% if user.is_superuser %}
+	<a href="/admin/" >Admin</a> |
+	{% endif %}
+	{% if user.is_authenticated %}
+	<a href="{% url 'add' %}" >Add Post</a> | 
+	<a href="{% url 'logout' %}?next={{request.path}}" >Logout, {{user}}</a> |
+	{% else %}	
+	<a href="{% url 'login' %}?next={{request.path}}" >Login</a> |
+	{% endif %}
 </div>
 <div class="main_block">
 	{% block content %}
