--- a/news_board/main/templates/comments.html
+++ b/news_board/main/templates/comments.html
@@ -6,17 +6,18 @@
 
 {% block content %}
 <div>
-	<div class="title">
+	<div class="main_block">
 		{{ post.title }}<br>
-		<div class="date">{{ post.author_name }}
+		<div class="date"><b>{{ post.author_name }}</b>
 			{{ post.creation_date }}</div>
 	</div>
 
 	<form method='post'>
-	{% csrf_token %}
-	{{ form.as_p }}
-	<input type="hidden" name="post_id" id="post_id" value="{{ post.pk }}">
-	<input type="submit" name="comment" id="comment" value="add comment">
+		{% csrf_token %}
+		{{ form.as_p }}
+		<input type="hidden" name="post_id" id="post_id" value="{{ post.pk }}">
+		<input type="hidden" name="author_name" id="author_name" value="{{ user.username }}">
+		<input type="submit" name="comment" id="comment" value="add comment">
 	</form>
 	<div>
 	<ul>
