--- a/news_board/main/static/main/style.css
+++ b/news_board/main/static/main/style.css
@@ -19,6 +19,30 @@ div a:hover {
 
 .nav {
 	background: darkorange;
+	display: inline-block;
+	margin: auto;
+	/* padding-left: 10px; */
+	/* padding-right: 20px; */
+	width: 100%;
+
+	/* display: flex; */
+	/* flex-wrap: wrap; */
+}
+.nav a:hover {
+	color: white;
+}
+
+.logo {
+	float: left;
+	width: 50%;
+	margin-left: 10px;
+}
+
+.auth {
+	float: right;
+	width: 40%;
+	text-align: right;
+	margin-right: 10px;
 }
 
 .main_block {
