--- a/news_board/staticfiles/main/style.css
+++ b/news_board/staticfiles/main/style.css
@@ -5,8 +5,7 @@ body {
 }
 
 div {
-	color: grey;
-	
+	color: #262626;
 }
 
 div a {
@@ -14,18 +13,52 @@ div a {
 	color: black;
 }
 
+div a:hover {
+	color: red;
+}
+
 .nav {
 	background: darkorange;
+	display: inline-block;
+	margin: auto;
+	/* padding-left: 10px; */
+	/* padding-right: 20px; */
+	width: 100%;
+
+	/* display: flex; */
+	/* flex-wrap: wrap; */
+}
+.nav a:hover {
+	color: white;
+}
+
+.logo {
+	float: left;
+	width: 50%;
+	margin-left: 10px;
+}
+
+.auth {
+	float: right;
+	width: 40%;
+	text-align: right;
+	margin-right: 10px;
 }
 
 .main_block {
+	margin: 5px 0;
+	padding-left: 10px;
 }
 
 .post {
 	margin-top: 20px;
+}
 
+.title {
+	color: #262626;
 }
 
 .date {
 	font-size: 10px;
+	color: grey;
 }
