--- a/news_board/main/templates/base.html
+++ b/news_board/main/templates/base.html
@@ -11,13 +11,15 @@
 <div class="nav">
 	<div class="logo">
 		<a href="{% url 'index' %}" >Home</a> | 
+		{% if user.is_authenticated %}
+		<a href="{% url 'add' %}" >Add Post</a> | 
+		{% endif %}
 		{% if user.is_superuser %}
 		<a href="/admin/" >Admin</a> |
 		{% endif %}
-		{% if user.is_authenticated %}
-		<a href="{% url 'add' %}" >Add Post</a> | 
 	</div>
 	<div class="auth">
+		{% if user.is_authenticated %}
 		| <a href="{% url 'logout' %}?next={{request.path}}" >Logout, {{user}}</a> 
 		{% else %}	
 		| <a href="{% url 'login' %}?next={{request.path}}" >Login</a> 
